tests/compile-fail/generated/derives-span-Default-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: std::default::Default` is not satisfied
  --> $DIR/derives-span-Default-enum-struct-variant.rs:17:6
   |
17 |      x: Error
   |      ^^^^^^^^ the trait `std::default::Default` is not implemented for `Error`
   |
   = note: required by `std::default::Default::default`
